# linear-equation

./: .gitignore  CMakeLists.txt  README.md  ceedling  doxconf  project.yml
libraries/lib/: libconfig++.so.11.0.2  libconfig.so.11.0.2
libraries/lib/pkgconfig/: libconfig++.pc  libconfig.pc
src/: CMakeLists.txt  argparser.c  argparser.h  core.c  core.h  matrix.c  matrix.h  solving_methods.c  solving_methods.h
test/: CMakeLists.txt  test_argparser.c  test_matrix.c  test_solving_methods.c
